<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon_light"
    android:padding="@dimen/common_padding">

    <TextView
        android:id="@+id/text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_text"
        android:paddingStart="@dimen/text_view_start_padding"
        android:paddingTop="@dimen/text_view_top_padding"
        android:paddingEnd="@dimen/text_view_end_padding"
        android:paddingBottom="@dimen/text_view_bottom_padding"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_3"
        app:layout_constraintEnd_toEndOf="@id/key_division"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_6"
        app:layout_constraintEnd_toEndOf="@id/key_multip"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_9"
        app:layout_constraintEnd_toEndOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        style="@style/buttons"
        android:onClick="onDigitButtonClick"
        android:text="@string/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_dot"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        style="@style/buttons"
        android:onClick="onDotButtonClick"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_equals"
        app:layout_constraintStart_toEndOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equals"
        style="@style/buttons"
        android:onClick="onEqualsButtonClick"
        android:text="@string/key_equals"
        app:layout_constraintEnd_toEndOf="@id/key_plus"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_division"
        style="@style/buttons"
        android:onClick="onOperationButtonClick"
        android:text="@string/key_division"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/text_view" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multip"
        style="@style/buttons"
        android:onClick="onOperationButtonClick"
        android:text="@string/key_multip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_division" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_minus"
        style="@style/buttons"
        android:onClick="onOperationButtonClick"
        android:text="@string/key_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_multip" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_plus"
        style="@style/buttons"
        android:onClick="onOperationButtonClick"
        android:text="@string/key_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_equals"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onSettingsButtonClick"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>